Bug Fix: resize navbar so it doesnt overflow

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,6 +1,6 @@
 .headerContainer {
   visibility: hidden;
-  width: 100vw;
+  max-width: 100vw;
 
   .navbar {
     height: 5rem;
